--- a/vignettes/tartare.bib
+++ b/vignettes/tartare.bib
@@ -1,4 +1,15 @@
-
+@article{Kockmann2021,
+  doi = {10.1021/acs.jproteome.0c00866},
+  url = {https://doi.org/10.1021/acs.jproteome.0c00866},
+  year = {2021},
+  month = mar,
+  publisher = {American Chemical Society ({ACS})},
+  volume = {20},
+  number = {4},
+  pages = {2028--2034},
+  author = {Tobias Kockmann and Christian Panse},
+  title = {The {rawrr R} Package: Direct Access to Orbitrap Data and Beyond}
+}
 
 @article{Trachsel2018,
   doi = {10.1021/acs.jproteome.8b00173},
